# openapi.yaml
@@ -152,6 +152,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Wittgenstein.v1.GetTopicsMetadataReply'
+    /seminar/topic/stopping:
+        post:
+            tags:
+                - Seminar
+            operationId: Seminar_StopTopic
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Wittgenstein.v1.StopTopicRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Wittgenstein.v1.StopTopicReply'
     /user/login:
         post:
             tags:
@@ -430,6 +448,16 @@ components:
                 roleUid:
                     type: string
                 content:
+                    type: string
+        Wittgenstein.v1.StopTopicReply:
+            type: object
+            properties:
+                message:
+                    type: string
+        Wittgenstein.v1.StopTopicRequest:
+            type: object
+            properties:
+                topicId:
                     type: string
         Wittgenstein.v1.Topic:
             type: object
